Prevent wrapping to next line

--- a/src/components/NavListItem/style.less
+++ b/src/components/NavListItem/style.less
@@ -2,8 +2,8 @@
 @import '../../styles/vars.less';
 
 .nav-list-item {
-  display: inline;
   font-family: 'Roboto';
+  white-space: nowrap;
 
   span {
     margin-left: 10px;
